# hyperio

./: .branch-progress.md  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HYPERION_IMPROVEMENTS.md  README.md  SECURITY.md  hyperion.toml  hyperionscan.ps1  scan.ps1  setup_ai.ps1  setup_ai.sh  test_ai_system.py
.github/workflows/: ci.yml
examples/: sample_contract.sol  sample_rust.rs
fuzz/: README.md
ml_agents/: architecture.md  embedding_model.py  exploit_generator.py  hunter_agent.py  hyperion_ai.py  knowledge_graph.py  ollama_client.py  symbolic_execution.py
ml_agents/hyperion-scans/: README.md  analyze_critical.py  hyperion_ai_report.json  quick_test.py  run_critical_scan.py  run_full_ai_test.py  run_quick_ai.py  scan_cratd2c.py  scan_von.py  test_full_system.py
ml_agents/hyperion-scans/CratD2C-Audit/: README.md  full_scan_report.json
ml_agents/hyperion-scans/UnitusLabs-Contracts-Audit/: README.md  TOOLS_DISCOVERY.md  critical_analysis_report.json  critical_findings.json  knowledge_graph_stats.json
ml_agents/hyperion-scans/von-smart-contract-Audit/: README.md  full_scan_report.json
plugins/: .gitkeep
plugins/example_plugin/: Cargo.toml  plugin.toml
plugins/example_plugin/src/: lib.rs
plugins/pattern_scanner/: plugin.toml  scanner.py
plugins/secret_scanner/: Cargo.toml  plugin.toml
plugins/secret_scanner/src/: lib.rs
plugins/solidity_scanner/: Cargo.toml  plugin.toml
plugins/solidity_scanner/src/: lib.rs
src/: config.rs  main.rs
src/ai/: mod.rs
src/core/: ast.rs  engine.rs  file_walker.rs  git.rs  language.rs  mod.rs
src/plugins/: abi.rs  cli_runner.rs  discovery.rs  loader.rs  manager.rs  mod.rs
src/reports/: finding.rs  generator.rs  json.rs  markdown.rs  mod.rs  pdf.rs
src/scanner/: fuzzing.rs  ml.rs  mod.rs  patterns.rs  rust_scanner.rs  scanner.rs  secrets.rs  solidity.rs
tests/: test_scanner.rs
