[package]
name = "hyperion-scan"
version = "0.1.0"
edition = "2021"
authors = ["HyperionScan Team"]
description = "Local-only smart contract and code security scanner with WASM plugin support"
license = "MIT"
readme = "README.md"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.34", features = ["full"] }

# File system
walkdir = "2.4"
glob = "0.3"

# Git operations
git2 = "0.18"

# Tree-sitter for AST parsing
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"

# WASM runtime for plugins (disabled - using CLI plugins for now)
# wasmtime = "15.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Report generation
comrak = "0.20"  # Markdown processing

# PDF generation
printpdf = "0.6"

# Regex for pattern matching
regex = "1.10"

# Optional ONNX ML runtime (disabled - use latest version if needed)
# ort = { version = "2.0", optional = true }

# Fuzzing support
arbitrary = { version = "1.3", features = ["derive"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# TOML parsing
toml = "0.8"

# UUID for findings
uuid = { version = "1.6", features = ["v4"] }

[features]
default = []
# ml = ["ort"]  # Disabled until ort version is fixed

[[bin]]
name = "hyperion"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
