[package]
name = "solidity_scanner"
version = "0.1.0"
edition = "2021"
description = "Solidity security scanner plugin for HyperionScan"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[profile.release]
opt-level = "s"
lto = true
